[package]
name = "norse-audir"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["debug", "ksmedia", "audioclient", "combaseapi", "coml2api", "devpkey", "mmdeviceapi", "objbase", "unknwnbase", "winerror", "synchapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-sys = "1.9"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[dev-dependencies]
lewton = "0.9"
