[package]
name = "audir"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "sles-gen"
]

[package.metadata.android]
assets = "assets"

[dependencies]
bitflags = "1"

[target.'cfg(windows)'.dependencies]
com-impl = "0.1.1"
winapi = { version = "0.3.8", features = ["debug", "ksmedia", "audioclient", "combaseapi", "coml2api", "devpkey", "handleapi", "mmdeviceapi", "objbase", "unknwnbase", "winerror", "synchapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-sys = { version = "1.11", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"
log = "0.4"
android_glue = "0.2"

[dev-dependencies]
audrey = "0.2"
