[package]
name = "audir"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples/music"
]

[[example]]
name = "aaudio"
crate-type = ["cdylib"]

[[example]]
name = "sine"
crate-type = ["cdylib"]

[dependencies]
bitflags = "1"
log = "0.4"

[target.'cfg(windows)'.dependencies]
com-impl = "0.1.1"
winapi = { version = "0.3.8", features = ["debug", "ksmedia", "audioclient", "combaseapi", "coml2api", "devpkey", "handleapi", "mmdeviceapi", "objbase", "unknwnbase", "winerror", "synchapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-sys = { version = "1.11", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
audir-sles = "0.1"
ndk = { path = "../android-ndk-rs/ndk" }
ndk-sys = { path = "../android-ndk-rs/ndk-sys" }
ndk-glue = { path = "../android-ndk-rs/ndk-glue" }
jni = "0.16"
# audir-aaudio = { path = "../audir-aaudio" }
