[package]
name = "audir-examples"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = ".."

[features]
aaudio = []
opensles = []
music = []

[[example]]
name = "android"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audir = { path = "../audir" }
audrey = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.1.1"

[package.metadata.android]
assets = "assets"
apk_label = "audir-examples"
