[package]
name = "audir-sles"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"
description = "OpenSL ES bindings for Android"
documentation = "https://docs.rs/audir-sles"
repository = "https://github.com/norse-rs/audir-sles"
readme = "README.md"
keywords = ["audio", "sound"]
categories = ["multimedia::audio"]

[dependencies]
