[package]
name = "audir"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"

[target.'cfg(windows)'.dependencies]
com-impl = "0.1.1"
winapi = { version = "0.3.8", features = ["debug", "ksmedia", "audioclient", "combaseapi", "coml2api", "devpkey", "handleapi", "mmdeviceapi", "objbase", "unknwnbase", "winerror", "synchapi"] }
audio_thread_priority = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-sys = { version = "1.11", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
audir-sles = "0.1"
ndk = { version = "0.1.1", features = ["aaudio"] }
ndk-sys = "0.1.1"
ndk-glue = "0.1.1"
jni = "0.16"

[dev-dependencies]
anyhow = "1"
hound = "3"
