[package]
name = "audir-music"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"
workspace = "../.."

[[example]]
name = "music"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
audir = { path = "../../" }
audrey = "0.2"

[package.metadata.android]
assets = "assets"

[target.'cfg(target_os = "android")'.dependencies]
ndk = { path = "../../../android-ndk-rs/ndk" }
ndk-glue = { path = "../../../android-ndk-rs/ndk-glue" }
